# gymfc-aircraft-plugins

./: .gitignore  CMakeLists.txt  README.md
include/: gazebo_motor_model.h
msgs/: Distance.proto
src/: gazebo_distance_plugin.cpp  gazebo_distance_plugin.h  gazebo_imu_plugin.cpp  gazebo_imu_plugin.h  gazebo_motor_model.cpp  gazebo_motor_model.h  tags
